Update pyproject.toml for MY neeeds

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,23 +8,23 @@ readme = "README.md"
 include = ["README.md"]
 
 [tool.poetry.dependencies]
-python = ">=3.9"
+python = ">=3.5"
 matplotlib = "^3.5.0"
 giotto-ph = "^0.2.0"
-torch = ">=1.12.0"
+torch = "^=1.12.1"
 gudhi = "^3.4.1"
 POT = "^0.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=5.2"
-Sphinx = ">=4.3.1"
+Sphinx = ">=3.3.1"
 sphinx-rtd-theme = "^1.0.0"
 tqdm = "^4.62.3"
-torchvision = ">=0.11.2"
+torchvision = "^=0.13.1"
 flake8 = "^4.0.1"
 
 [tool.black]
-line-length = 79
+line-length = 80
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
